@@ -1818,6 +1818,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\include\wx\eventfilter.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\include\wx\evtloop.h"
 				>
 			</File>
